# raspberry-pi-home-security-monitoring

./: LICENSE  README.md  install.ps1  install.sh  install_env_info.py  pyproject.toml  requirements-dev.txt  requirements.dev.txt  requirements.pi.txt  requirements.ras-pi.txt  requirements.txt  setup-pi.sh  setup.sh  temp.sh
docs/: parts-list.md  ras-pi-docs.md
docs/trouble-shooting/: foo.md
src/: main.py  mock_gpio_ui.py  os_utils.py  security_zones.py
src/pi_home_security/: config.json  device_monitoring_service.py  main.py  service.py  services.py  system_state_controller.py
src/pi_home_security/alarm/: alarm_manager.py
src/pi_home_security/bus/: event_bus.py
src/pi_home_security/components/: pi_board.py  pi_extension_board.py  pi_main_board.py  pi_pin.py  security_device.py  temp.py
src/pi_home_security/hardware/: base.py  gpio_service.py  gpio_service_factory.py  gpiozero_impl.py  mock_lgpio_factory.py  service_test.py
src/pi_home_security/pi_cli/: cli.py
src/pi_home_security/pi_service/: base.py  gpiozero_impl.py  mock_impl.py  pigpio_impl.py  service.py  service_test.py
src/pi_home_security/pi_ui/: dashboard.py  main.py
src/pi_home_security/security/: component.py
src/pi_home_security/subscribers/: __init__.py  alarm_subscriber.py  db_writter.py  logging_subscriber.py  mqtt_broker.py
src/rpi_home_security/: pi_board.py  pi_pin.py
tests/: imports_test.py  pi_board_test.py  pi_gpio_service_test.py  pi_service_test.py
tests/configs/: config_malformed.json  config_valid.json
tests/mocks/: mock_mcp_pin.py
(+4 files in other folders)
