[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pi_home_security"]


[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[project]
name = "pi_home_security"
version = "0.0.0"
authors = [
  { name="Eric Wilson", email="eric.wilson@geekcafe.com" }
]
description = ""
readme = "README.md"
license = {text = "MIT License"}
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  
]